--- a/Hekki2/Hekki2.csproj
+++ b/Hekki2/Hekki2.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Drawing.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Drawing.Common.6.0.0\lib\net461\System.Drawing.Common.dll</HintPath>
     </Reference>
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -73,12 +74,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cherkasy.cs" />
+    <Compile Include="Combination.cs" />
     <Compile Include="ExcelWorker.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CherkasyReg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CherkasyReg.Designer.cs">
+      <DependentUpon>CherkasyReg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="School.cs" />
+    <Compile Include="SchoolReg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SchoolReg.Designer.cs">
+      <DependentUpon>SchoolReg.cs</DependentUpon>
     </Compile>
     <Compile Include="Marshal2.cs" />
     <Compile Include="Pilot.cs" />
@@ -87,13 +103,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Race.cs" />
     <Compile Include="ScreenReader.cs" />
+    <Compile Include="Sprint.cs" />
     <Compile Include="SprintReg.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SprintReg.Designer.cs">
       <DependentUpon>SprintReg.cs</DependentUpon>
     </Compile>
-    <Compile Include="RaceManager.cs" />
+    <EmbeddedResource Include="CherkasyReg.resx">
+      <DependentUpon>CherkasyReg.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SchoolReg.resx">
+      <DependentUpon>SchoolReg.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SprintReg.resx">
       <DependentUpon>SprintReg.cs</DependentUpon>
     </EmbeddedResource>
